# tg_ai_bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
bot/: __main__.py
bot/db/: __init__.py  engine.py  models.py  requests.py
bot/handlers/: user.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/migration/: env.py
bot/migration/versions/: b83e5b10a10c_create_tables_with_ai_models_seed.py
bot/utils/: __init__.py  config_reader.py  generators.py  send_message.py  setup_logging.py  ui_commands.py
