[project]
name = "ai-tg-bot-0303"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
]
